--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "axios": "^0.26.0",
     "babel-preset-mobx": "^2.0.0",
     "bootstrap": "^5.1.3",
+    "eslint-plugin-react": "^7.28.0",
     "mobx": "^6.4.0",
     "mobx-react": "^7.3.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
